[package]
name = "day05"
version = "0.1.0"
authors = ["Alex Savia <savia.alex@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
nalgebra  = "0.31.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false